# AstraMeter

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.ini  config.ini.example  docker-compose.yaml  esphome.example.yaml  hacs.json  pyproject.toml  release.sh  repository.yaml  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: feature_request.yml  issue_report.md  issue_report.yml
.github/scripts/: stamp-ref.sh
.github/workflows/: beta-release.yaml  build-image.yml  ci.yml  merge-manifests.yml  pages.yml  pr-preview.yml  release.yml  rust-ci.yml  validate.yaml
bins/astra-sim/: Cargo.toml
bins/astra-sim/src/: battery.rs  cli.rs  load_model.rs  main.rs  powermeter_sim.rs  protocol.rs  runner.rs  tui.rs
bins/astrameter-esp32/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
bins/astrameter-esp32/src/: main.rs
bins/astrameter-host/: Cargo.toml
bins/astrameter-host/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: ini_wrap.rs  lib.rs  mqtt_uri.rs  netmask.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  powermeter.rs  registry.rs
crates/emulator-ct002/: Cargo.toml
crates/emulator-ct002/src/: balancer.rs  lib.rs  protocol.rs  server.rs
crates/emulator-ct002/tests/: integration_udp.rs
crates/emulator-shelly/: Cargo.toml
crates/emulator-shelly/src/: lib.rs
crates/emulator-shelly/tests/: integration_udp.rs
crates/insights-mqtt/: Cargo.toml
crates/insights-mqtt/src/: discovery.rs  lib.rs  marstek.rs  service.rs
crates/marstek-api/: Cargo.toml
crates/marstek-api/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform-espidf/: Cargo.toml
crates/platform-espidf/src/: http_impl.rs  lib.rs  mqtt_impl.rs  net_impl.rs  serial_impl.rs  time_impl.rs  ws_impl.rs
crates/platform-std/: Cargo.toml
crates/platform-std/src/: http_impl.rs  lib.rs  mqtt_impl.rs  net_impl.rs  serial_impl.rs  time_impl.rs  ws_impl.rs
crates/platform/src/: http.rs  lib.rs  mqtt.rs  net.rs  serial.rs  time.rs  ws.rs
crates/powermeters/: Cargo.toml
crates/powermeters/src/: amisreader.rs  emlog.rs  envoy.rs  esphome.rs  homeassistant.rs  homewizard.rs  iobroker.rs  json_http.rs  lib.rs  modbus.rs  mqtt.rs  pipeline.rs  script.rs  shelly.rs  shrdzm.rs  sma_energy_meter.rs  sml.rs  tasmota.rs  tq_em.rs  vzlogger.rs
crates/powermeters/tests/: integration_json_http.rs
crates/sml/: Cargo.toml
crates/sml/src/: lib.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
crates/web/: Cargo.toml
crates/web/assets/: section_key_types.json
crates/web/src/: config_ui.rs  health.rs  lib.rs
crates/wrappers/: Cargo.toml
crates/wrappers/src/: hampel.rs  lib.rs  pid.rs  smoothing.rs  throttling.rs  transform.rs
custom_components/astrameter/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  ha_powermeter.py  manifest.json  marstek.py  number.py  sensor.py  strings.json  switch.py
develop/: generator.html
develop/js/: app.js  site.js
docs/: configuration.md  ct002-capture-analysis.md  ct002-ct003-protocol.md  ct002.md  esphome-powermeters.md  faq.md  marstek-firmware-behavior.md  marstek-mqtt-http.md  mqtt-insights.md  powermeters.md  simulator.md
docs/installation/: direct.md  docker.md  esphome.md  home-assistant.md
ha_addon/: Dockerfile  config.yaml  run.sh
ha_addon/translations/: en.yaml
js/: app.js  site.js
powermeter/: tibber.py  vzlogger_test.py
pr-preview/pr-399/: README.md  generator.html  index.html
pr-preview/pr-507/: index.html
pr-preview/pr-508/: generator.html  index.html
pr-preview/pr-516/: generator.html  how-balancing-works.html  index.html
pr-preview/pr-535/: CNAME  index.html
scripts/: assemble_integration.py
shelly/: shelly.py
src/astrameter/: __init__.py  cloud_reporting.py  cloud_reporting_test.py  entity_model.py  entity_model_test.py  health_service.py  import_clean_test.py  main.py  main_test.py  marstek_api.py  marstek_api_test.py  request_dedupe.py  request_dedupe_test.py  version_info.py  web_config.py  web_config_test.py  web_server.py
src/b2500_meter/: conftest.py  main.py  (+1 more)
tests/: _ct002_e2e_backend.py  smoke_efficiency_saturation.py  smoke_transitions.py  test_assemble_integration.py  test_b2500_e2e.py  test_balancer.py  test_balancer_capacity_floor.py  test_balancer_distribution_weight.py  test_balancer_efficiency_window_weight.py  test_balancer_empty_battery_lockup.py  test_balancer_min_dc_output.py  test_balancer_mixed_battery_charging.py  test_balancer_pace_saturation.py  test_balancer_probe_lockup.py  test_balancer_slot_hysteresis.py  test_balancer_small_residual_with_empty_battery.py  test_ct002_active_control.py  test_ct002_mac_policy.py  test_ct002_protocol.py  test_ct002_protocol_parity.py  test_e2e_probe_lockup.py  test_efficiency_e2e.py  test_issue376_pv_passthrough.py  test_issue447_dchrg_crosstalk_saturation.py  test_marstek_api.py  test_marstek_api_extended.py  test_release.py  test_simulator_powermeter_sim.py  test_simulator_runner.py  test_smoother.py  test_steering_eval.py  test_version_info.py  test_version_info_extended.py  test_web_server.py
tests/components/ct002/: CMakeLists.txt  _gen_protocol_test_vectors.py  host_balancer_test.cpp  host_cloud_reporting_test.cpp  host_marstek_responder_test.cpp  host_protocol_test.cpp  host_protocol_test_vectors.h  host_wrappers_test.cpp  test.1phase.yaml  test.cloud-reporting.esp32-ard.yaml  test.e2e.host.yaml  test.esp32-ard.yaml  test.esp32-idf.yaml  test.host.yaml  test.insights.esp32-ard.yaml  test.no-filters.yaml  test.registration.esp32-ard.yaml  test.registration.host.yaml  test_balancer_parity.py  test_codegen.py  test_host_e2e.py  test_host_protocol.py  test_shared_e2e.py
tests/components/ct002/fixtures/: _populate_wire_hex.py  balancer_parity_harness.cpp  protocol_golden_vectors.json
web/: README.md  build.mjs  generator.html  how-balancing-works.html  index.html  package-lock.json  package.json  robots.txt  tsconfig.json
(+307 files in other folders)
