[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/config",
    "crates/platform",
    "crates/platform-std",
    "crates/platform-espidf",
    "crates/powermeters",
    "crates/wrappers",
    "crates/emulator-ct002",
    "crates/emulator-shelly",
    "crates/insights-mqtt",
    "crates/marstek-api",
    "crates/web",
    "crates/sml",
    "crates/testkit",
    "bins/astrameter-host",
    "bins/astrameter-esp32",
    "bins/astra-sim",
]

# Default `cargo check` / `cargo build` skip the ESP32 binary; it requires the
# Xtensa toolchain and an --target argument. Build it explicitly via
# `cargo +esp build -p astrameter-esp32 --target xtensa-esp32s3-espidf`.
default-members = [
    "crates/core",
    "crates/config",
    "crates/platform",
    "crates/platform-std",
    "crates/powermeters",
    "crates/wrappers",
    "crates/emulator-ct002",
    "crates/emulator-shelly",
    "crates/insights-mqtt",
    "crates/marstek-api",
    "crates/web",
    "crates/sml",
    "crates/testkit",
    "bins/astrameter-host",
    "bins/astra-sim",
]

[workspace.package]
version = "3.0.0-alpha.0"
edition = "2021"
rust-version = "1.83"
license = "GPL-3.0-or-later"
repository = "https://github.com/tomquist/astrameter"
authors = ["AstraMeter contributors"]

[workspace.dependencies]
# Internal crates
astrameter-core = { path = "crates/core" }
astrameter-config = { path = "crates/config" }
astrameter-platform = { path = "crates/platform" }
astrameter-platform-std = { path = "crates/platform-std" }
astrameter-platform-espidf = { path = "crates/platform-espidf" }
astrameter-powermeters = { path = "crates/powermeters" }
astrameter-wrappers = { path = "crates/wrappers" }
astrameter-emulator-ct002 = { path = "crates/emulator-ct002" }
astrameter-emulator-shelly = { path = "crates/emulator-shelly" }
astrameter-insights-mqtt = { path = "crates/insights-mqtt" }
astrameter-marstek-api = { path = "crates/marstek-api" }
astrameter-web = { path = "crates/web" }
astrameter-sml = { path = "crates/sml" }
astrameter-testkit = { path = "crates/testkit" }

# Async runtime & utilities
tokio = { version = "1.42", default-features = false }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1"
parking_lot = "0.12"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-ini = "0.21"

# Errors & logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
webpki-roots = "0.26"
url = "2"

# Modbus + Serial + multicast
tokio-modbus = { version = "0.16", default-features = false, features = ["tcp", "rtu"] }
tokio-serial = "5"
socket2 = { version = "0.5", features = ["all"] }

# Parsing helpers
jsonpath-rust = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
crc = "3"
hex = "0.4"
base64 = "0.22"

# IP parsing
ipnet = "2"

# Web (host only)
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "query"] }
tower-http = { version = "0.6", default-features = false, features = ["fs", "trace"] }

# Simulator (host dev tool)
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
rand = "0.8"

# Testing
insta = "1"
proptest = "1"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
opt-level = "z"
# Fat LTO trips the Xtensa LLVM backend on some rustls codegen ("Cannot
# select: XtensaISD::PCREL_WRAPPER ..." against
# `rustls::msgs::handshake::ServerExtensions::read`). `thin` keeps most
# of the size win without crossing the per-TU boundary that exposes
# the bug.
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-host]
inherits = "release"
opt-level = 3
strip = "debuginfo"
panic = "unwind"
