[package]
name = "astra-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Marstek battery + powermeter simulator (dev tool for astrameter)"

[[bin]]
name = "astra-sim"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "process"] }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "blocking"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
