[package]
name = "astrameter-esp32"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AstraMeter ESP32-S3 firmware binary."

[[bin]]
name = "astrameter-esp32"
path = "src/main.rs"

[dependencies]
astrameter-core = { workspace = true }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.52", default-features = false, features = ["std", "binstart"] }
esp-idf-hal = { version = "0.46", default-features = false }
embedded-svc = "0.29"
log = "0.4"
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "net"] }
tokio-util = "0.7"
parking_lot = { workspace = true }
astrameter-config = { workspace = true }
astrameter-platform = { workspace = true }
astrameter-platform-espidf = { workspace = true }
astrameter-powermeters = { workspace = true }
astrameter-emulator-ct002 = { workspace = true }
astrameter-emulator-shelly = { workspace = true }
astrameter-insights-mqtt = { workspace = true }
astrameter-marstek-api = { workspace = true }
astrameter-web = { workspace = true }

# build-dependencies are keyed off the *host* platform, not the target,
# so a `cfg(target_os = "espidf")` gate would always be false. List
# embuild unconditionally; it's a thin helper and harmless on the host.
[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

# Apply our `sdkconfig.defaults`. Paths are resolved against the
# *workspace* root (not this crate), so use the full relative path.
# Combined with `ESP_IDF_SYS_ROOT_CRATE` in the workspace .cargo/config.toml,
# this is what actually plumbs our IDF Kconfig overrides through.
[package.metadata.esp-idf-sys]
esp_idf_sdkconfig_defaults = ["bins/astrameter-esp32/sdkconfig.defaults"]

# Pull `espressif/esp_websocket_client` (managed component) into the
# IDF build so esp-idf-svc's `ws::client::EspWebSocketClient` is
# available. Without this the `homeassistant` / `homewizard`
# powermeters (which both need WSS) can't connect on ESP32.
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.5.0" }
