[package]
name = "astrameter-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "INI parsing + section dispatch for AstraMeter."

[dependencies]
astrameter-core = { workspace = true }
ini = { package = "rust-ini", version = "0.21" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ipnet = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
