[package]
name = "astrameter-emulator-ct002"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Marstek CT002/CT003 UDP emulator: wire protocol, server, and balancer."

[dependencies]
astrameter-core = { workspace = true }
astrameter-config = { workspace = true }
astrameter-platform = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tokio-util = "0.7"
tracing = { workspace = true }

[dev-dependencies]
astrameter-platform-std = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
async-trait = { workspace = true }
