[package]
name = "astrameter-platform-espidf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ESP32 (esp-idf-svc / esp-idf-hal) implementations of astrameter-platform traits."

[dependencies]
astrameter-core = { workspace = true }
astrameter-platform = { workspace = true }
async-trait = { workspace = true }

# The Xtensa toolchain isn't available on host CI, so all heavy ESP-IDF
# deps are gated. Host `cargo check --workspace` builds an empty stub.
#
# Note: NO rumqttc / tokio-rustls / rustls here. The MQTT impl uses
# `esp_idf_svc::mqtt::client::EspAsyncMqttClient` which talks to the
# ESP-IDF bundled mbedTLS — that's the path that actually compiles for
# xtensa-esp32s3-espidf. Same idea for the HTTP client (uses
# `EspHttpConnection` with the ESP-IDF crt-bundle). The WebSocket path
# still uses tokio-tungstenite for now; if it hits the same ring/rustls
# block we can route it through `esp_websocket_client_*` later.
[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.52", default-features = false, features = ["std", "binstart"] }
esp-idf-hal = { version = "0.46", default-features = false }
embedded-svc = "0.29"
log = "0.4"
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "net", "io-util"] }
socket2 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
