[package]
name = "astrameter-platform-std"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Host (Linux/macOS/Windows) implementations of astrameter-platform traits."

[dependencies]
astrameter-core = { workspace = true }
astrameter-platform = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "net", "fs", "io-util"] }
tokio-tungstenite = { workspace = true }
tokio-serial = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
reqwest = { workspace = true }
rumqttc = { workspace = true }
socket2 = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
