[package]
name = "astrameter-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-abstraction traits (HTTP/WebSocket/MQTT/UDP/Serial/FS/Timer)."

[dependencies]
astrameter-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
