[package]
name = "astrameter-powermeters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "All 17 powermeter implementations + runtime registry."

[dependencies]
astrameter-core = { workspace = true }
astrameter-config = { workspace = true }
astrameter-platform = { workspace = true }
astrameter-sml = { workspace = true }
astrameter-wrappers = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
jsonpath-rust = { workspace = true }
md-5 = "0.10"
rand = "0.8"
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tokio-util = "0.7"
tokio-modbus = { workspace = true }
rumqttc = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_os = "espidf"))'.dependencies]
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
astrameter-platform-std = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
serde_json = { workspace = true }
wiremock = { workspace = true }
