[package]
name = "astrameter-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Health endpoint + web config editor."

[dependencies]
astrameter-core = { workspace = true }
astrameter-config = { workspace = true }
astrameter-platform = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "macros", "rt"] }
parking_lot = { workspace = true }

[target.'cfg(not(target_os = "espidf"))'.dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
