[package]
name = "astrameter-wrappers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Composable Powermeter wrappers: transform, throttling, smoothing, hampel, pid."

[dependencies]
astrameter-core = { workspace = true }
astrameter-platform = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
